<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_green"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ic_star"
        android:layout_width="43dp"
        android:layout_height="44dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/ic_pokeball"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.982"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/estrella" />

    <TextView
        android:id="@+id/tv_meowscarada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/nombre"
        android:textColor="@color/white"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.107"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_num_pokedex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/num_pokedex"
        android:textColor="@color/dark_gray"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.412"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_meowscarada" />

    <ImageView
        android:id="@+id/ic_pokeball"
        android:layout_width="191dp"
        android:layout_height="204dp"
        android:layout_marginStart="244dp"
        android:layout_marginTop="68dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_pokeball" />

    <ImageView
        android:id="@+id/bc_blanco_redondo"
        android:layout_width="411dp"
        android:layout_height="479dp"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bg_cuadro_blanco" />

    <ImageView
        android:id="@+id/ic_meowscarada"
        android:layout_width="248dp"
        android:layout_height="225dp"
        android:layout_marginBottom="400dp"
        app:layout_constraintBottom_toBottomOf="@+id/bc_blanco_redondo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_num_pokedex"
        app:srcCompat="@drawable/meowscarada" />

    <ImageView
        android:id="@+id/ic_tipo_siniestro"
        android:layout_width="102dp"
        android:layout_height="24dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ic_tipo_planta"
        app:layout_constraintTop_toBottomOf="@+id/ic_meowscarada"
        app:srcCompat="@drawable/tipo_siniestro" />

    <ImageView
        android:id="@+id/ic_tipo_planta"
        android:layout_width="96dp"
        android:layout_height="25dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toStartOf="@+id/ic_tipo_siniestro"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ic_meowscarada"
        app:srcCompat="@drawable/tipo_planta" />

    <TextView
        android:id="@+id/tv_label_altura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/nombre_altura"
        android:textColor="@color/red"
        android:textSize="18dp"
        app:layout_constraintEnd_toStartOf="@+id/tv_altura"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bc_blanco_redondo" />

    <TextView
        android:id="@+id/tv_altura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/altura"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_label_altura"
        app:layout_constraintTop_toTopOf="@+id/bc_blanco_redondo" />

    <TextView
        android:id="@+id/tv_label_habilidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/nombre_habilidad"
        android:textColor="@color/red"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_habilidad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_altura"
        app:layout_constraintTop_toTopOf="@+id/bc_blanco_redondo"
        app:layout_constraintVertical_bias="0.35000002"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tv_habilidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/habilidad"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_peso"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_habilidad" />

    <TextView
        android:id="@+id/tv_label_peso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="26dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/nombre_peso"
        android:textColor="@color/red"
        android:textSize="18dp"
        app:layout_constraintEnd_toStartOf="@+id/tv_peso"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bc_blanco_redondo" />

    <TextView
        android:id="@+id/tv_peso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:text="@string/peso"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_label_peso"
        app:layout_constraintTop_toTopOf="@+id/bc_blanco_redondo" />

    <TextView
        android:id="@+id/tv_descripcion"
        android:layout_width="313dp"
        android:layout_height="93dp"
        android:layout_marginTop="16dp"
        android:text="@string/descripcion"
        android:textSize="18dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/bc_blanco_redondo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bc_blanco_redondo"
        app:layout_constraintVertical_bias="0.578" />

    <ImageView
        android:id="@+id/ic_floragato"
        android:layout_width="109dp"
        android:layout_height="102dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/bc_blanco_redondo"
        app:layout_constraintEnd_toStartOf="@+id/ic_fuecoco"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/floragato" />

    <ImageView
        android:id="@+id/ic_fuecoco"
        android:layout_width="109dp"
        android:layout_height="102dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/bc_blanco_redondo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ic_floragato"
        app:srcCompat="@drawable/fuecoco" />

    <TextView
        android:id="@+id/tv_floragato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="150dp"
        android:text="@string/nombre_anterior"
        app:layout_constraintBottom_toBottomOf="@+id/bc_blanco_redondo"
        app:layout_constraintEnd_toStartOf="@+id/tv_fuecoco"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ic_floragato" />

    <TextView
        android:id="@+id/tv_fuecoco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre_siguiente"
        app:layout_constraintBottom_toBottomOf="@+id/bc_blanco_redondo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_floragato"
        app:layout_constraintTop_toBottomOf="@+id/ic_fuecoco" />

</androidx.constraintlayout.widget.ConstraintLayout>